# codex-obsidian-skills

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SKILL.md  pyproject.toml  skill-config.example.yaml
agents/: openai.yaml
skill/ppt-to-md-for-obsidian/: README.md  SKILL.md  pyproject.toml  requirements.txt  skill-config.example.yaml
skill/ppt-to-md-for-obsidian/agents/: openai.yaml
skill/ppt-to-md-for-obsidian/examples/before-after/: raw-extracted.md
skill/ppt-to-md-for-obsidian/examples/before-after/final-notes/: 00_课程总览.md  01_经验风险与泛化.md  知识点精简复习版_含公式.md  知识点详细版_含公式.md
skill/ppt-to-md-for-obsidian/examples/non-course/: paper-note-vault.md  research-presentation.md
skill/ppt-to-md-for-obsidian/examples/sample-course/extracted/: sample_course_extracted.md
skill/ppt-to-md-for-obsidian/examples/sample-course/notes/: 00_课程总览.md  知识点详细版_含公式.md
skill/ppt-to-md-for-obsidian/fixtures/pdf-formula-regression/: extracted_formula_noise.md
skill/ppt-to-md-for-obsidian/references/: obsidian-style.md  solvenotes-profile.md  validation.md
skill/ppt-to-md-for-obsidian/scripts/: __init__.py  check_course_notes.py  check_source_coverage.py  clean_latex_from_ppt.py  convert_ppt_to_pptx.py  extract_legacy_ppt_text.py  extract_pdf_text.py  extract_pptx_text.py  ppt_to_obsidian_pipeline.py  validate_skill_repo.py
skill/ppt-to-md-for-obsidian/tests/: test_check_course_notes.py  test_check_obsidian_links.py  test_check_source_coverage.py  test_clean_latex_from_ppt.py  test_convert_ppt_to_pptx.py  test_extract_pdf_text.py  test_pipeline.py
(+95 files in other folders)
