[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ppt-to-md-for-obsidian"
version = "0.1.0"
description = "Codex skill and scripts for converting PPT/PPTX/PDF courseware into Obsidian Markdown notes."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "blacksheep1118" }]
dependencies = [
  "python-pptx>=1.0.2",
  "PyYAML>=6.0",
  "pypdf>=5.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0,<9.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools]
py-modules = []
